[package]
name = "gengine_clipboard"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["run_wasm"]

[features]
default = []
follow_links = ["reqwest"]
follow_html_img = ["reqwest"]
x11 = ["x11rb", "reqwest"]

[target.'cfg(target_os = "linux")'.dependencies]
winit = "0.30"

[dependencies]
image = "0.25.6"

reqwest = { version = "0.12.20", features = [
	"blocking",
	"rustls-tls",
], optional = true }

x11rb = { version = "0.13.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Clipboard",
	"Window",
	"Navigator",
	"console",
	"ClipboardEvent",
	"Document",
	"DataTransfer",
	"DataTransferItemList",
	"DataTransferItem",
	"File",
	"Blob",
	"FileReader",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlImageElement",
	"Url",
	"EventTarget",
	"Request",
	"Response",
	"Headers",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_System_DataExchange",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Memory",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
] }
