[package]
name = "gengine_clipboard"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["run_wasm"]

[dependencies]
raw-window-handle = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1" }
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Clipboard",
	"Window",
	"Navigator",
	"console",
	"ClipboardEvent",
	"Document",
	"DataTransfer",
	"DataTransferItemList",
	"DataTransferItem",
	"File",
	"Blob",
	"FileReader",
	"HtmlCanvasElement",
	"HtmlElement",
	"HtmlImageElement",
	"Url",
	"EventTarget",
	"Request",
	"Response",
	"Headers",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_System_DataExchange",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
	"Win32_System_Memory",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
] }

[dev-dependencies]
winit = "0.30.12"
softbuffer = "0.4.6"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
unstable_write = []
