[package]
name = "gengine_clipboard"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["run_wasm"]

[dependencies]
raw-window-handle = "0.6.2"
log = "0.4.28"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1" }
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
	"Win32_System_DataExchange",
	"Win32_System_Memory",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Window",
	"ClipboardEvent",
	"Document",
	"DataTransfer",
	"DataTransferItemList",
	"DataTransferItem",
	"File",
	"FileReader",
	"EventTarget",
] }


[dev-dependencies]
winit = "0.30.12"
softbuffer = "0.4.6"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
	"HtmlElement",
	"HtmlImageElement",
	"Blob",
	"Url",
] }

[features]
default = []
unstable_write = []
